--- a/src/styles/project-styles.css
+++ b/src/styles/project-styles.css
@@ -1,23 +1,42 @@
-#projectBoxes {
+#projectList {
+    padding: 0px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-auto-rows: 3.75rem;
     column-gap: 1rem;
     row-gap: 1rem;
+    width: 100%;
 }
 
-.projectBox {
+.projectListItem {
+    appearance: none;
+    list-style: none;
+    overflow: hidden;
+    display: flex;
+    max-width: 100%;
+}
+
+button.projectButton {
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 100%;
     border: 1px solid var(--light-dark);
+    background-color: white;
     border-radius: 20px;
-    overflow: hidden;
     padding: 1rem 1.5rem;
     position: relative;
 }
 
-.projectBox>h3 {
+button.projectButton:hover {
+    background-color: var(--primary-background-opacity-lighter)
+}
+
+button.projectButton:active {
+    background-color: var(--primary-background-opacity-light)
+}
+
+.projectButton>h3 {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
